1.增加心情 2.增加管理员 3.完善其他接口
